--- a/estilos/style.css
+++ b/estilos/style.css
@@ -17,3 +17,60 @@ Lilas: #5f2c82
 /*
 Mobile first!
 */
+
+*
+{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
+}
+
+html, body
+{
+    background-color: var(--cor-lilais);
+    height: 100vh;
+    width: 100vw;
+}
+
+main
+{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+
+}
+
+section#login
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    overflow: hidden;
+    background-color: white;
+    height: 400px;
+    width: 250px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.438);
+
+    transition: width .3s, height .3;
+    transition-timing-function: ease;
+}
+
+section#login > div#imagem
+{
+    display: block;
+    background: #5f2c82 url(../img/bg.jpg) no-repeat;
+    background-size: cover;
+    background-position: left center;
+    height: 200px;
+    
+}
+
+section#login > div#formulario
+{
+    display: block;
+    padding: 10px;
+}
