--- a/estilos/mediaqueries.css
+++ b/estilos/mediaqueries.css
@@ -38,7 +38,7 @@
     {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
-    
+
     section#login
     {
         width: 950px;
@@ -46,13 +46,17 @@
 
     section#login > div#imagem
     {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
     section#login > div#formulario
     {
-        float: right;
+        float: left;
         width: 50%;
+    }
+    div#formulario > p
+    {
+        font-size: 1em;
     }
 }
