--- a/estilos/style.css
+++ b/estilos/style.css
@@ -50,8 +50,8 @@ section#login
 
     overflow: hidden;
     background-color: white;
-    height: 400px;
-    width: 250px;
+    height: 450px;
+    width: 350px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.438);
 
@@ -73,4 +73,15 @@ section#login > div#formulario
 {
     display: block;
     padding: 10px;
+}
+
+div#formulario > h1
+{
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+div#formulario > p
+{
+    font-size: 0,8em;
 }
